# advent-of-code

./: .gitignore  CMakeLists.txt
2022/day1/src/: day1.cpp
2022/day10/src/: day10.cpp
2022/day2/src/: day2.cpp
2022/day3/src/: day3.cpp
2022/day4/src/: day4.cpp
2022/day5/src/: day5.cpp
2022/day6/src/: day6.cpp
2022/day7/src/: day7.cpp
2022/day8/src/: day8.cpp
2022/day9/src/: day9.cpp
2023/day1/src/: day1.cpp
2023/day2/src/: day2.cpp
